# Voyacoin

./: .gitignore  .travis.yml  COPYING  INSTALL  Makefile.am  README.md  buildnode.sh  configure.ac  pkg.m4
.tx/: config
build-aux/m4/: voyacoin_find_bdb48.m4  voyacoin_qt.m4  voyacoin_subdir_to_include.m4
contrib/: README.md  qt_translations.py  supcoin-qt.pro  supcoind.bash-completion  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  changelog  control  copyright  rules  supcoin-qt.desktop  supcoin-qt.install  supcoin-qt.lintian-overrides  supcoin-qt.protocol  supcoind.bash-completion  supcoind.examples  supcoind.install  supcoind.lintian-overrides  supcoind.manpages  watch
contrib/devtools/: README.md  fix-copyright-headers.py  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win.yml
contrib/gitian-downloader/: linux-download-config  win32-download-config  wtogami-key.pgp
contrib/init/: README.md  supcoind.conf  supcoind.openrc  supcoind.openrcconf  supcoind.service
contrib/linearize/: README.md  example-linearize.cfg  linearize-hashes.py
contrib/macdeploy/: README.md  background.xcf  detached-sig-apply.sh  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  makeseeds.py
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: README.md  verify.sh
depends/: README  README.usage  config.guess  config.site.in
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bootstrap.md  build-osx.md  build-unix.md  coding.md  dnsseed-policy.md  gitian-building.md  init.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  travis-ci.txt  unit-tests.md
doc/release-notes/: release-notes-0.3.12.md  release-notes-0.3.13.md  release-notes-0.3.14.md  release-notes-0.3.15.md  release-notes-0.3.18.md  release-notes-0.3.20.2.md  release-notes-0.3.20.md  release-notes-0.3.21.md  release-notes-0.3.22.md  release-notes-0.3.23.md  release-notes-0.3.24.md  release-notes-0.4.0.md  release-notes-0.4.1.md  release-notes-0.4.3.md  release-notes-0.4.4.md  release-notes-0.4.6.md  release-notes-0.5.0.md  release-notes-0.5.1.md  release-notes-0.5.2.md  release-notes-0.5.3.md  release-notes-0.5.4.md  release-notes-0.5.5.md  release-notes-0.6.0.md  release-notes-0.6.2.md  release-notes-0.6.3.md  release-notes-0.7.0.md  release-notes-0.7.1.md  (+14 more)
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  alert.h  allocators.h  amount.cpp  amount.h  base58.cpp  base58.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clearblocks.sh  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_write.cpp  crypter.h  db.h  eccryptoverify.h  ecwrapper.h  hash.h  init.cpp  init.h  key.cpp  key.h  keystore.h  leveldbwrapper.h  (+58 more)
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/crypto/: common.h  hmac_sha256.h  hmac_sha512.h  rfc6979_hmac_sha256.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/primitives/: block.h  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentrequest.proto  paymentrequestplus.h  paymentserver.cpp  paymentserver.h  peertablemodel.h  qvalidatedlineedit.cpp  qvalidatedlineedit.h  qvaluecombobox.h  (+49 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: voyacoin_ach.ts  voyacoin_af_ZA.ts  voyacoin_ar.ts  voyacoin_be_BY.ts  voyacoin_bg.ts  voyacoin_bs.ts  voyacoin_ca.ts  voyacoin_ca@valencia.ts  voyacoin_ca_ES.ts  voyacoin_cmn.ts  voyacoin_cs.ts  voyacoin_cy.ts  voyacoin_da.ts  voyacoin_de.ts  voyacoin_el_GR.ts  voyacoin_en.ts  voyacoin_eo.ts  voyacoin_es.ts  voyacoin_es_CL.ts  voyacoin_es_DO.ts  voyacoin_es_MX.ts  voyacoin_es_UY.ts  voyacoin_et.ts  voyacoin_eu_ES.ts  voyacoin_fa.ts  voyacoin_fa_IR.ts  voyacoin_fi.ts  voyacoin_fr.ts  voyacoin_fr_CA.ts  voyacoin_gl.ts  voyacoin_gu_IN.ts  voyacoin_he.ts  voyacoin_hi_IN.ts  voyacoin_hr.ts  voyacoin_hu.ts  voyacoin_id_ID.ts  voyacoin_it.ts  voyacoin_ja.ts  voyacoin_ka.ts  voyacoin_kk_KZ.ts  (+31 more)
src/qt/res/: voyacoin-qt-res.rc
src/qt/res/icons/: voyacoin.icns
src/qt/test/: paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: interpreter.cpp  interpreter.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h  voyacoinconsensus.cpp  voyacoinconsensus.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/src/java/: org_supcoin_NativeSecp256k1.c  org_supcoin_NativeSecp256k1.h
src/secp256k1/src/java/org/supcoin/: NativeSecp256k1.java
src/test/: README.md  bignum.h  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  compress_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  netbase_tests.cpp  rpc_wallet_tests.cpp  script_tests.cpp  test_voyacoin.cpp  voyacoin-util-test.py  wallet_tests.cpp
src/test/data/: README.md
src/univalue/: gen.cpp  univalue.h  univalue_escapes.h
(+48 files in other folders)
